# roa-tastudio

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  details.yaml
src/: backend.hpp  dllmain.cpp  mod.h  panel.cpp  panel.h  parser.cpp  parser.h  pch.h  utils.h
src/console/: console.cpp
src/game_hook/: expert_mode.cpp  expert_mode.h  expert_mode.s
src/hooks/: hooks.cpp  hooks.hpp
src/hooks/backend/dx10/: hook_directx10.cpp
src/hooks/backend/dx11/: hook_directx11.cpp
src/hooks/backend/dx12/: hook_directx12.cpp
src/hooks/backend/dx9/: hook_directx9.cpp
src/hooks/backend/opengl/: hook_opengl.cpp
src/hooks/backend/vulkan/: hook_vulkan.cpp
src/menu/: menu.cpp  menu.hpp
src/utils/: utils.cpp  utils.hpp
